<resources>
    <string name="app_name">WMC App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="notice_board">Notice Board</string>
    <string name="complaint">Complaint</string>
    <string name="complaint_profile">Your Complaints</string>
    <string name="new_updates">News and Updates</string>
    <string name="ward">Ward Information</string>
    <string name="contact">Contact Us</string>
    <string name="emegency_numbers">Emergency Numbers</string>
    <string name="forget_pswd">Forgot Password</string>
    <string name="feedback">Feedback</string>
    <string name="change_pswd">Change Password</string>
    <string name="suggestion">Suggestion</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="prabhag">Ward Information</string>
    <string name="ward_member">Ward Member</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="torisum">Tourism</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_location_data_provided">No Location Found</string>
    <string name="no_address_found">No Location Found</string>
    <string name="address_found">Address found</string>
    <string name="service_not_available">No play service available</string>
    <string name="invalid_lat_long_used">Invalid key</string>
    <string name="imgadd">imgAdd</string>
    <string name="enter_description">Enter Description</string>
    <string name="other_address">Address</string>
    <string name="rationale_no_permission">Please grant permission to further proceed.</string>
    <string name="rationale_call_permission">Please provide call  and  sms permission</string>
    <string name="current_location">Current Location</string>
    <string name="other_location">Other Location</string>
    <string name="show_identity">Show Identity</string>
    <string name="hide_identity">Hide Identity</string>
    <string name="logout">Logout</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_pass">Invalid Password</string>
    <string name="empty">Field is empty</string>
    <string name="url_login">/Token</string>
    <string name="hospital">Hospital</string>
    <string name="fire">Fire Bridget</string>
    <string name="police">Police</string>
    <string name="ambulance">Ambulance</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_filter">filter langauge</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="url_city">/api/CustomerApp/CityList</string>
    <string name="url_complaint">/api/CustomerApp/ComplaintListPerUser</string>
    <string name="url_notice_board">/api/CustomerApp/NoticeboardList</string>
    <string name="url_complaint_category_list">/api/CustomerApp/ComplaintCategoryList</string>
    <string name="invalid_number">Please Enter 10 digit Number</string>
    <string name="pswd">Password does not match.</string>
    <string name="url_registration">/api/CustomerApp/Register</string>
    <string name="url_edit_profile">/api/UploadFileApp/EditUserProfile</string>
    <string name="fail_to_load">Fail to load information</string>
    <string name="rationale_no_internet">No Internet Connection</string>
    <string name="invalid_pass_not">Password must be minimum 6 character</string>
    <string name="url_change_password">/api/CustomerApp/changePassword</string>
    <string name="url_forget_pswd">/api/CustomerApp/ForgotPassword</string>
    <string name="title_activity_login">Login</string>
    <string name="dismiss">Dismiss</string>
    <string name="url_toriusm">/api/CustomerApp/TourismList</string>
    <string name="url_add_complaint">/api/UploadFileApp/MediaUpload</string>
    <string name="url_profile">/api/CustomerApp/UserProfile</string>
    <string name="url_like">/api/CustomerApp/LikeSave</string>
    <string name="title_activity_profile">Profile</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="title_vote">Vote</string>
    <string name="sync">Sync</string>
    <string name="share">Share</string>
    <string name="sms">SMS</string>
    <string name="no_internet_title">No Internet connection!!!</string>
    <string name="message_dialogue">When do you want to send information?</string>
    <string name="immediately">Immediately</string>
    <string name="later">Later</string>
    <string name="url_filter_category">/api/CustomerApp/CateSubcatTourismList</string>
    <string name="url_add_suggestion">/api/UploadFileApp/SaveSuggestion</string>
    <string name="title_activity_emergency">EmergencyActivity</string>
    <string name="other">Other</string>
    <string name="update">Update</string>
    <string name="url_prabhag">/api/CustomerApp/PrabhagList</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">10 digit mobile number</string>
    <string name="person_name">Update Profile</string>
    <string name="password">6 digit password</string>
    <string name="emaiId">Email Id/ Mobile Number</string>
    <string name="enter_emailid">EmailId/mobile number</string>
    <string name="url_emergency">/api/CustomerApp/EmergencyContactList</string>
    <string name="title_activity_profiles">Profile</string>
    <string name="url_delete_notice">/api/CustomerApp/NoticeDeleteByUser</string>
    <string name="no_list">You have not posted any complaint yet!!!!</string>
    <string name="no_list_like">You have not Like any item yet!!!!</string>
    <string name="vote_list">Voted List</string>
    <string name="url_like_complaint_user">api/CustomerApp/UserLikeComplaintList</string>
    <string name="invalid_rating">Rating should be greater zero.</string>
    <string name="url_news">/api/CustomerApp/NewsAndUpdateList</string>
    <string name="url_feedback">/api/CustomerApp/FeedBack</string>
    <string name="url_delete_list">/api/CustomerApp/DeletedUserList</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="utility">Utility</string>
    <string name="about">About</string>
    <string name="user_info">User Information</string>
    <string name="preferences_category_main">Notification</string>
    <string name="notice_pref">NoticeBoard</string>
    <string name="news_pref">NoticeBoard</string>
    <string name="pref_security_key">SecurityKey</string>
    <string name="pref_notice_switch_summ">Switching for accept  NoticeBoard  Notification </string>
    <string name="pref_news_switch_summ">Switching for accept News and Event Notification </string>
    <string name="preferences_security_summ">Show Security and Privacy of the App. </string>
    <string name="notice">Notice Board </string>
    <string name="news">News and Event </string>
    <string name="security">Security and Privacy</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="delete">Delete</string>
</resources>