<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preferences_category_main">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="@string/notice_pref"
            android:summary="@string/pref_notice_switch_summ"
            android:title="@string/notice"/>
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="@string/news_pref"
            android:summary="@string/pref_news_switch_summ"
            android:title="@string/news"/>

        <Preference
            android:key="@string/pref_security_key"
            android:summary="@string/preferences_security_summ"
            android:title="@string/security"/>

    </android.support.v7.preference.PreferenceCategory>






</android.support.v7.preference.PreferenceScreen>