<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Notice Board" >
        <menu>
        <item
            android:id="@+id/nav_notice_board"
            android:icon="@drawable/ic_dashboard_24dp"
            android:title="@string/notice_board" />

        <item
            android:id="@+id/nav_complaint"
            android:icon="@drawable/ic_complaints"
            android:title="@string/complaint" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/new_updates" />
            <item
            android:id="@+id/nav_tourism"
            android:icon="@drawable/ic_tour"
            android:title="@string/torisum" />
        </menu>
    </item>
    <item android:title="@string/utility">
        <menu>

        <item
            android:id="@+id/nav_praphag"
            android:icon="@drawable/ic_word"
            android:title="@string/prabhag" />
            <item
                android:id="@+id/nav_emgs_no"
                android:icon="@drawable/ic_ememrgency"
                android:title="@string/emegency_numbers" />


        </menu>
    </item>
    <item android:title="@string/about">
        <menu>

        <item
            android:id="@+id/nav_suggestion"
            android:icon="@drawable/ic_suggestion"
            android:title="@string/suggestion" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/feedback" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact" />

            </menu>
    </item>
    <item android:title="@string/user_info">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_change_pswd"
                android:icon="@drawable/ic_password"
                android:title="@string/change_pswd" />
            <item
                android:id="@+id/nav_registration"
                android:icon="@drawable/ic_registration"
                android:title="@string/registration" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_006_logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
