<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/rl_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_garbage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY" />

                <itg8.com.wmcapp.widget.CustomFontTextView
                    android:id="@+id/lbl_cityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_gradient"
                    android:drawableLeft="@drawable/ic_pin"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:text="Location CityName"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    app:font_value="ROBOTO_REGULAR" />
            </FrameLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite">

            <itg8.com.wmcapp.widget.CustomFontTextView
                android:id="@+id/lbl_problem_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="left"
                android:inputType="text"
                android:lines="2"
                android:maxLines="2"
                android:text="Problem "
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold"
                app:font_value="ROBOTO_MEDIUM" />

            <itg8.com.wmcapp.widget.CustomFontTextView
                android:id="@+id/lbl_address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_problem_value"
                android:layout_marginTop="5dp"
                android:text="NAGPUR"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:font_value="ROBOTO_LIGHT" />

            <itg8.com.wmcapp.widget.CustomFontTextView
                android:id="@+id/lbl_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_address_value"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="Votes"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                android:visibility="gone"
                app:font_value="ROBOTO_LIGHT" />

            <itg8.com.wmcapp.widget.CustomFontTextView
                android:id="@+id/lbl_vote_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_address_value"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/lbl_vote"
                android:gravity="center"
                android:text="4"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                android:visibility="gone"
                app:font_value="ROBOTO_LIGHT" />


        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rl_bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <itg8.com.wmcapp.widget.CustomFontTextView
                    android:id="@+id/lbl_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_sync"
                    android:gravity="center_vertical"
                    android:text="@string/sync"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp"
                    android:visibility="visible"
                    app:font_value="ROBOTO_LIGHT" />

                <ProgressBar
                    android:id="@+id/progressBar_Sync"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="gone" />
            </FrameLayout>


            <itg8.com.wmcapp.widget.CustomFontTextView
                android:id="@+id/lbl_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_share_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/share"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                app:font_value="ROBOTO_LIGHT" />

            <itg8.com.wmcapp.widget.CustomFontTextView
                android:id="@+id/lbl_sms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_textsms"
                android:gravity="center_vertical"
                android:text="@string/sms"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                app:font_value="ROBOTO_LIGHT" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <itg8.com.wmcapp.widget.CustomFontTextView
                    android:id="@+id/lbl_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_clear_dp"
                    android:gravity="center_vertical"
                    android:text="@string/delete"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp"
                    app:font_value="ROBOTO_LIGHT" />

                <ProgressBar
                    android:id="@+id/progressBar_delete"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="gone" />
            </FrameLayout>



        </LinearLayout>
    </RelativeLayout>


</android.support.v7.widget.CardView>